...
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="0dp">

	<TextView
		android:id="@+id/txtNombre"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="5dp"
		android:text=""
		android:textSize="24sp"
		android:textStyle="bold"
...
		android:focusable="false"
		android:lines="1"
        android:maxLines="1"
		/>

	<ImageButton
		android:id="@+id/btnEditar"
		android:layout_toStartOf="@+id/btnMapa"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginEnd="15dp"
		android:background="@android:color/transparent"
...
