<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".views.ActRuta">
	<item
		android:id="@+id/menu_eliminar"
		android:orderInCategory="100"
		android:title="@string/eliminar"
		android:icon="@android:drawable/ic_menu_delete"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_buscar"
		android:orderInCategory="200"
		android:title="@string/buscar"
		android:icon="@android:drawable/ic_menu_search"
		app:showAsAction="ifRoom"/>
</menu>