<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:paddingBottom="2dp"
	android:paddingStart="4dp"
	android:paddingEnd="2dp"
	android:paddingTop="2dp"
	tools:context=".views.ActMain">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/listView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		app:layout_behavior="@string/appbar_scrolling_view_behavior" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fabNuevo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="30dp"
		android:src="@android:drawable/ic_input_add"/>

</RelativeLayout>
